--- a/notebooks/multiHiCCompare.Rmd
+++ b/notebooks/multiHiCCompare.Rmd
@@ -2,13 +2,6 @@
 title: "multiHiCCompare analysis of 16p samples"
 author: "Siddharth Reed"
 date: "`r Sys.Date()`"
-output: 
-    html_document:
-        toc: true
-        toc_float: true
-        theme: paper
-        code_folding: hide
-        df_print: paged
 ---
 <style type="text/css">
 .main-container {
@@ -47,127 +40,381 @@ library(purrr)
 
 # Load all differential contact results
 
+Load results for all comparisons for all bin-pairs
 ```{r load_results}
 results.df <- 
-    load_all_multiHiCCompare_results(
-        file_suffix='-multiHiCCompare.tsv',
-        sample_group_priority_fnc=sample_group_priority_fnc_16p,
+    check_cached_results(
+        results_file=ALL_MULTIHICCOMPARE_RESULTS,
+        force_redo=TRUE,
+        results_fnc=load_all_multiHiCCompare_results,
+        comparisons=NULL,
         resolutions=NULL,
+        gw.fdr.threshold=1,
         fdr.threshold=1,
         nom.threshold=0.05
-    )
-results.df %>%
-    count(merged, zero.p, A.min, resolution, Sample.Group.Numerator, Sample.Group.Denominator)
-```
-
-# Plot stuff
-
-Prepare data for plotting
-```{r make_plot_df}
-plot_df <- 
-    all.results %>% 
-    select(-c(chr, zero.p, merged, A.min)) %>% 
-    mutate(resolution=scale_numbers(resolution)) %>% 
-    # left_join(
-    #     load_chr_sizes() %>% rename('chr'=Chr),
-    #     by='chr'
-    # ) %>% 
+    ) %>% 
     mutate(
-        logFC=-logFC,
-        log.p.adj=-log10(p.adj),
         chr=factor(chr, levels=CHROMOSOMES),
-    ) %>%
-    rename(
-        'region1.bp'=region1,
-        'region2.bp'=region2
-    ) %>% 
-    mutate(
-        region1.bin=region1.bp / resolution,
-        region2.bin=region2.bp / resolution,
-        region1.pct=100 * (region1.bp / chr.total.bp),
-        region2.pct=100 * (region2.bp / chr.total.bp)
-    ) %>% 
-    mutate(
-        distance.bp=region2.bp - region1.bp,
-        distance.kb=distance.bp / 1000,
-        distance.bin=region2.bin - region1.bin,
-        distance.pct=region2.pct - region1.pct,
-        distance.discrete=scale_numbers(distance.bp),
-        resolution=scale_numbers(resolution)
+        resolution=
+            resolution %>% 
+            scale_numbers(force_numeric=TRUE) %>% 
+            scale_numbers(),
+        comparison=
+            factor(
+                comparison,
+                levels=
+                    c(
+                        '16p.iN.WT vs 16p.NSC.WT',
+                        '16p.iN.DEL vs 16p.iN.WT',
+                        '16p.iN.DUP vs 16p.iN.WT',
+                        '16p.NSC.DEL vs 16p.NSC.WT',
+                        '16p.NSC.DUP vs 16p.NSC.WT'
+                    )
+            )
     )
-plot_df %>% head(2) %>% t()
+
+```
+Subset specific results for plotting
+```{r subset.data}
+chrs.to.plot <- factor(CHROMOSOMES, levels=CHROMOSOMES)
+# chrs.to.plot <- CHROMOSOMES[c(10,16,22)]
+# results.df <- results.df %>% filter(chr %in% chrs.to.plot)
+# chrs.to.plot <- c('chr10', 'chr16', 'chrX')
+plot.df <- 
+    results.df %>% 
+    filter(chr %in% chrs.to.plot) %>% 
+    # relevant parameters
+    filter(
+        A.min == 5,
+        zero.p == 0.8,
+        !merged
+    ) %>% 
+    select(-c(A.min, zero.p, merged)) %>% 
+    # Only show GW significant hits
+    filter(p.adj.gw < 0.1)
 ```
 
+# N Contacts {.tabset}
 
-```{r plot_manhattan}
-chr='chr16'
-resolution=all.results$resolution[[1]] %>% scale_numbers()
-plot.obj <- 
-    plot_df %>%
-    filter(chr == 'chr16') %>% 
-    filter(zero.p == 0.8) %>%
-    filter(grepl('WT', Sample.Group.Denominator)) %>% 
-    filter(region1.bp != region2.bp) %>% 
+```{r n_contacts_plot_df}
+n.plot.df <- 
+    results.df %>% 
+    mutate(
+        sig.lvl=
+            case_when(
+                p.adj.gw < 0.01 ~ 'p.adj.gw < 0.01',
+                p.adj.gw < 0.1  ~ 'p.adj.gw < 0.1',
+                p.value  < 0.05 ~ 'p.value  < 0.05',
+                TRUE            ~ 'N.S.'
+            )
+    ) %>% 
+    count(
+        A.min, zero.p, merged, chr, resolution, comparison, sig.lvl,
+        name='nDACs'
+    )
+n_plot_fnc <- 
+    partial(
+        make_nested_plot_tabs,
+        max_header_lvl=3,
+        plot_fnc=plot_heatmap,
+        # x_var='sig.lvl',
+        y_var='comparison',
+        fill_var='nDACs', 
+        label_var='nDACs',
+        # legend.position='top',
+        # axis.text.x=element_text(angle=45, hjust=1),
+        # legend.text=element_text(angle=35, hjust=1),
+        axis.title.x=element_blank(),
+        axis.title.y=element_blank()
+    )
+```
+
+## Genome-wide {.tabset .tabset-pills}
+
+```{r plot_n_DACs_gw, results='asis', warning=FALSE, message=FALSE, fig.dim=c(8,4)}
+n.plot.df %>% 
+    group_by(A.min, zero.p, merged, resolution, comparison, sig.lvl) %>%
+    summarize(nDACs=sum(nDACs)) %>% 
+    n_plot_fnc(
+        group_cols=c('Celltype', 'resolution'),
+        x_var='sig.lvl',
+        label.size=5,
+    )
+```
+
+## Per Chr {.tabset .tabset-pills}
+
+```{r plot_n_DACs_chr, results='asis', fig.dim=c(8,4)}
+n.plot.df %>% 
+    n_plot_fnc(
+        group_cols=c('Celltype', 'resolution', 'sig.lvl'),
+        x_var='chr',
+        label.size=2,
+        axis.text.x=element_text(angle=45, hjust=1)
+    )
+```
+
+# Distribution Plots {.tabset}
+
+```{r dist_plot_df}
+dist.plot.df <- 
+    plot.df %>% 
+    select(
+        resolution, Celltype, comparison, chr,
+        region1.bp, region2.bp, distance.bp,
+        log.p.adj.gw, logFC
+    ) %>%
+    pivot_longer(
+        c(logFC, log.p.adj.gw),
+        names_to='statistic',
+        values_to='value'
+    )
+dist_lot_fnc <- 
+    partial(
+        make_nested_plot_tabs,
+        group_cols=c('Celltype', 'resolution'),
+        max_header_lvl=3,
+        plot_fnc=plot_boxplot,
+        # x_var='comparison',
+        x_scale_mode='discrete',
+        y_var='value',
+        # fill_var='comparison',
+        # facet_row='statistic',
+        scales='free_y',
+        outlier.size=0.2,
+        # legend.position='right',
+        axis.title.x=element_blank(),
+        axis.title.y=element_blank(),
+        axis.text.x=element_text(angle=45, hjust=1),
+        plot_elements=
+            list(
+                geom_hline(
+                    yintercept=0,
+                    linetype='dashed'
+                )
+            )
+    )
+```
+
+## Genome-wide {.tabset .tabset-pills}
+
+```{r plot_fc_dist_gw, results='asis', fig.dim=c(10, 6), eval=TRUE}
+dist.plot.df %>% 
+    dist_lot_fnc(
+        x_var='comparison',
+        facet_row='statistic'
+    )
+```
+
+## Per Chr {.tabset .tabset-pills}
+
+```{r plot_fc_dist_chr, results='asis', fig.dim=c(16, 9), eval=TRUE}
+dist.plot.df %>% 
+    dist_lot_fnc(
+        x_var='chr',
+        fill_var='comparison',
+        facet_row='statistic'
+    )
+```
+
+# Volcano Plots {.tabset}
+
+```{r volcano_plot_fnc}
+volcano_plot_fnc <- 
+    partial(
+        make_nested_plot_tabs,
+        group_cols=c('Celltype', 'resolution'),
+        max_header_lvl=3,
+        plot_fnc=plot_jitter,
+        x_var='logFC',
+        y_var='log.p.adj.gw',
+        x_axis_label_accuracy=0.01,
+        y_axis_label_accuracy=0.1,
+    )
+```
+
+## Genome-Wide {.tabset .tabset-pills}
+
+```{r plot_volcanos_gw, results='asis', fig.dim=c(8, 4), eval=TRUE}
+plot.df %>% 
+    volcano_plot_fnc(
+        color_var='comparison', 
+        # legend.position=c(0.7, 0.9)
+        legend.position='right'
+    )
+```
+
+## Fixed Scales {.tabset .tabset-pills}
+
+```{r plot_volcanos_fixed, results='asis', fig.dim=c(14, 8), eval=TRUE}
+plot.df %>% 
+    volcano_plot_fnc(
+        color_var='comparison', 
+        facet_group='chr',
+        facet_nrow=4
+    )
+```
+
+## Free Scales {.tabset .tabset-pills}
+
+```{r plot_volcanos, results='asis', fig.dim=c(16, 8), eval=TRUE}
+plot.df %>% 
+    volcano_plot_fnc(
+        color_var='comparison', 
+        facet_group='chr',
+        facet_nrow=4,
+        scales='free_y'
+    )
+```
+
+# Manhattan Plots {.tabset}
+
+```{r manhattan_plot_df}
+manhattan.plot.df <- 
+    plot.df %>% 
+    select(
+        resolution, comparison, Celltype, chr, 
+        region1.bp, region2.bp, distance.bp,
+        log.p.adj.gw, logFC
+    ) %>%
     pivot_longer(
         c(region1.bp, region2.bp),
         names_to='contact.side',
         values_to='region.bp'
     ) %>% 
-    mutate(Comparison=glue('{Sample.Group.Numerator} vs WT')) %>% 
-    select(Comparison, region, region.bp, log.p.adj, logFC) %>%
+    mutate(
+        contact.side=
+            ifelse(
+                contact.side == 'region1.bp',
+                'left',
+                'right'
+            )
+    ) %>% 
     pivot_longer(
-        c(logFC, log.p.adj),
+        c(logFC, log.p.adj.gw),
+        names_to='statistic',
+        values_to='value'
+    ) 
+# Lines to draw on plots
+manhattan.lines <- 
+    list(
+        geom_vline(
+            xintercept=c(86435256, 86521792), # WAPL region on chr10
+            linewidth=0.3,
+            linetype='dashed',
+            color='purple'
+        ),
+        geom_vline(
+            xintercept=c(36876769, 37066413), # NIPBL region on chr5
+            linewidth=0.3,
+            linetype='dashed',
+            color='orange'
+        ),
+        geom_hline(
+            yintercept=0,
+            linewidth=0.05,
+            linetype='solid',
+            color='black',
+        )
+    )
+manhattan_plot_fnc <- 
+    partial(
+        make_nested_plot_tabs,
+        max_header_lvl=3,
+        plot_fnc=plot_jitter,
+        x_var='region.bp',
+        x_scale_mode='mb',
+        y_var='value',
+        axis.title.y=element_blank(),
+        axis.title.x=element_blank(),
+        plot_elements=manhattan.lines
+    )
+```
+
+## Faceted {.tabset .tabset-pills}
+
+```{r plot_manhattans_facet, results='asis', fig.dim=c(10, 6), eval=TRUE}
+manhattan.plot.df %>% 
+    manhattan_plot_fnc(
+        group_cols=c('Celltype', 'resolution', 'chr', 'statistic'),
+        color_var='distance.bp', 
+        facet_row='comparison',
+        legend.text=element_text(angle=45, hjust=1),
+        strip.text=element_text(size=7),
+        legend.position='top'
+    )
+```
+
+## Color-wise {.tabset .tabset-pills}
+
+```{r plot_manhattans_color, results='asis', fig.dim=c(12, 6), eval=TRUE}
+manhattan.plot.df %>% 
+    manhattan_plot_fnc(
+        group_cols=c('Celltype', 'resolution', 'chr'),
+        color_var='comparison', 
+        facet_row='statistic',
+        legend.position='top',
+        scales='free_y'
+    )
+```
+
+# Heatmap Plots {.tabset .tabset-pills}
+
+```{r plot_heatmaps, results='asis', fig.width=10, fig.height=5, eval=FALSE}
+plot.df %>% 
+    select(
+        resolution, comparison, Celltype, chr, 
+        region1.bp, region2.bp,
+        log.p.adj.gw, logFC
+    ) %>%
+    pivot_longer(
+        c(log.p.adj.gw, logFC),
         names_to='statistic',
         values_to='value'
     ) %>% 
-    ggplot() +
-    geom_jitter(
-        aes(
-            x=region.bp,
-            y=value,
-            color=Comparison
-        ), 
-        size=0.5,
-        alpha=0.7
-    ) +
-    facet_wrap(
-        ~ statistic,
-        ncol=1,
-        scales='free_y'
-    ) +
-    geom_hline(
-        yintercept=0,
-        linewidth=0.01,
-        linetype='solid',
-        color='black',
-    ) +
-    geom_vline(
-        xintercept=c(29488679, 30188679),
-        linewidth=0.001,
-        linetype='dashed',
-        color='orange',
-    ) +
-    labs(
-        x=glue('{chr}p @{resolution}')
-    ) +
-    scale_x_continuous(
-        expand=c(0.01, 0.01, 0.01, 0.01),
-        n.breaks=10,
-        labels=
-            label_bytes(
-                units="auto_si",
-                accuracy=2
-            )
-    ) +
-    theme(axis.text=element_text(size=6, hjust=1, angle=35), legend.position='right') +
-    add_ggtheme()
-ggsave(
-    file.path(MULTIHICCOMPARE_DIR, 'manhattan.plot.png'),
-    dpi=300,
-    plot=plot.obj,
-    width=9,
-    height=6,
-    units='in'
-)
-r
+    make_nested_plot_tabs(
+        group_cols=c('Celltype', 'resolution', 'chr', 'statistic'),
+        max_header_lvl=2,
+        plot_fnc=plot_jitter,
+        x_var='region1.bp',
+        x_scale_mode='mb',
+        y_var='region2.bp',
+        y_scale_mode='mb',
+        color_var='value',
+        facet_col='comparison',
+        alpha=0.3,
+        scales='fixed',
+        legend.position='right',
+        axis.text.x=element_text(angle=35, hjust=1)
+    )
 ```
+
+# Common Hits Across Comparisons {.tabset .tabset-pills}
+
+Count how many bin-pairs are DACs across multiple related conditions
+```{r define_overlapping_hits, warning=FALSE}
+hits.overlap.df <- 
+    plot.df %>% 
+    mutate(comparison=str_replace_all(comparison, ' ', '_')) %>% 
+    select(
+        resolution,
+        Group,
+        comparison,
+        chr,
+        bin.pair.idx
+    )
+```
+Plot overlapping hits
+```{r upset_plot_hits, results='asis', warning=FALSE, fig.dim=c(12, 7), eval=TRUE}
+hits.overlap.df %>%
+    make_nested_plot_tabs(
+        # group_cols=c('resolution', 'Group'),
+        group_cols=c('Group', 'resolution'),
+        max_header_lvl=2,
+        plot_fnc=plot_upset,
+        make.binary=TRUE,
+        category_col='comparison',
+        title.str='Common DACs across Comparisons'
+    )
+```
+
